Fix export blocks and remove Gmane broken search

--- a/community.org
+++ b/community.org
@@ -25,14 +25,6 @@ Subscribe to the [[https://lists.gnu.org/mailman/listinfo/emacs-orgmode][mailing
 
 Browse it [[http://news.gmane.org/gmane.emacs.orgmode][through Gmane]].
 
-#+begin_export html
-<form id="searchgmane" method="get" action="http://search.gmane.org/">
-<input type="text" name="query" />
-<input type="hidden" name="group" value="gmane.emacs.orgmode" />
-<input type="submit" value="Search gmane.emacs.orgmode" />
-</form>
-#+end_export
-
 The mailing list is /the/ central place for anything related to Org: help
 users, report bugs, suggest new features, etc.  Don't hesitate!
 
@@ -113,9 +105,9 @@ This is useful if you have a Git repository of Org files or even just a
   :ID:       vim
   :END:
 
-#+BEGIN_HTML
+#+begin_export html
 <iframe class="iframe" src="http://player.vimeo.com/video/17182850" width="500" height="404" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-#+END_HTML
+#+end_export
 
 Herbert Sitz wrote [[http://www.vim.org/scripts/script.php?script_id%3D3342][VimOrganizer]], a [[http://www.vim.org/][Vim]] plugin emulating many of the
 Org features.
@@ -143,7 +135,7 @@ Check out the [[https://vimeo.com/17182850][many screencasts]] were VimOrganizer
 /Takaaki Ishikawa/ is maintaining [[https://twitter.com/#!/orgmode_bot][@orgmode\_bot]] on Twitter and you can
 generally check [[https://twitter.com/#!/search/%2523orgmode][#orgmode]].
 
-#+BEGIN_HTML
+#+begin_export
 <script src="http://widgets.twimg.com/j/2/widget.js"></script>
 <script>
 new TWTR.Widget({
@@ -172,7 +164,7 @@ new TWTR.Widget({
   }
 }).render().setUser('orgmode_bot').start();
 </script>
-#+END_HTML
+#+end_export
 
 There is also a [[https://plus.google.com/b/102778904320752967064/102778904320752967064/posts][Google+ page for Org mode]] (see screenshot).
 
