--- a/fr/talks.org
+++ b/fr/talks.org
@@ -19,12 +19,12 @@ planifier des projets et de publier des documents, le tout en texte brut.</em></
   :ID:       google-tech-talk
   :END:
 
-#+begin_export html
-<iframe class="iframe" width="420" height="315" src="http://www.youtube.com/embed/oJTwQvgfgMM" frameborder="0" allowfullscreen></iframe>
-#+end_export
-
 Voici la vidéo du [[http://www.youtube.com/user/GoogleTechTalks][Google Tech Talk]] que j'ai donné le 15 juillet 2008 sur le
 campus de Google à Mountain View, California.
+
+#+begin_export html
+<iframe width="560" height="315" src="https://www.youtube.com/embed/oJTwQvgfgMM?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+#+end_export
 
 Merci à [[http://emacspeak.sourceforge.net/raman/][T.V. Raman]] et [[http://technical-dresese.blogspot.com/][Andrew Hyatt]] de m'avoir hébergé pendant mon séjour.
 
