--- a/talks.org
+++ b/talks.org
@@ -19,12 +19,12 @@ projects, and authoring documents with a fast and effective plain-text system.</
   :ID:       google-tech-talk
   :END:
 
-#+begin_export html
-<iframe class="iframe" width="420" height="315" src="http://www.youtube.com/embed/oJTwQvgfgMM" frameborder="0" allowfullscreen></iframe>
-#+end_export
-
 Here is the video of the [[http://www.youtube.com/user/GoogleTechTalks][Google Tech Talk]] about Org mode that I gave on
 July 15th, 2008 on the Google campus in Mountain View, California.
+
+#+begin_export html
+<iframe width="560" height="315" src="https://www.youtube.com/embed/oJTwQvgfgMM?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+#+end_export
 
 Thanks to [[http://emacspeak.sourceforge.net/raman/][T.V. Raman]] and [[http://technical-dresese.blogspot.com/][Andrew Hyatt]] for being my hosts during my stay.
 
