Changes_old.org: fix commit references

--- a/Changes_old.org
+++ b/Changes_old.org
@@ -2666,7 +2666,7 @@ entry will be shown several times.
 
 **** New =todo-unblocked= and =nottodo-unblocked= skip conditions
 
-See the [[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Df426da][git commit]] for more explanations.
+See the [[https://code.orgmode.org/bzg/org-mode/commit/f426dadef0c410b5abded3dd9d6bf1123385f0c8][git commit]] for more explanations.
 
 **** Allow category filtering in the agenda
 
@@ -2957,7 +2957,7 @@ This option allows Beamer export to inherit some properties.
 Thanks to Carsten for implementing this.
 
 **** ODT: Add support for ODT export in org-bbdb.el
-**** ODT: Add support for indented tables (see [[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3De9fd33][this commit]] for details)
+**** ODT: Add support for indented tables (see [[https://code.orgmode.org/bzg/org-mode/commit/e9fd334eb4ce4253875d84c34cb9ab750794fda5][this commit]] for details)
 **** ODT: Improve the conversion from ODT to other formats
 **** ASCII: Swap the level-1/level-2 characters to underline the headlines
 **** Support for Chinese, simplified Chinese, Russian, Ukrainian and Japanese
@@ -4352,7 +4352,7 @@ adding it to org.el and documenting it!
 This hook will be called when nothing special can be performed by
 the busy =C-c C-c= key.  Thanks to Paul Sexton for this idea!
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Deaafa42948427da37c065c8294edd0d0f30cccd4][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/eaafa42948427da37c065c8294edd0d0f30cccd4][(git commit)]]
 
 *** Allow relative time when scheduling/adding a deadline
 
@@ -4369,7 +4369,7 @@ You can also use this while (bulk-)rescheduling and
 
 Thanks to Memnon Anon for a heads up about this!
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D88eada52a63539b8866b9be861ea72ffbcafb37e][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/88eada52a63539b8866b9be861ea72ffbcafb37e][(git commit)]]
 
 *** New functions: =org-todo-yesterday= and =org-agenda-todo-yesterday=
 
@@ -4377,7 +4377,7 @@ This is useful when you need to mark things done yesterday.
 
 Thanks to Max Mikhanosha for this patch.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Ddea1a6f87b1fcd0122796a6603948bf131d4ff69][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/dea1a6f87b1fcd0122796a6603948bf131d4ff69][(git commit)]]
 
 *** =org-set-property= defaults to the last interactively modified property
 
@@ -4386,7 +4386,7 @@ last interactively modified property as a default choice.  If
 this command is called on a property line, the property in this
 line will take precedence over the last set property.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D9a2bf023467ad97fd171422c06541651c24b6014][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/9a2bf023467ad97fd171422c06541651c24b6014][(git commit)]]
 
 *** Clock: Allow synchronous update of timestamps in CLOCK log
 
@@ -4397,7 +4397,7 @@ slightly modified in case a timestamp needs some rounding.
 
 Thanks to Rainer Stengele for this idea.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Ddb731a971546aef8a1003df8f73462fc6dfd6a5a][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/db731a971546aef8a1003df8f73462fc6dfd6a5a][(git commit)]]
 
 *** Clock: New function =org-clock-remove-empty-clock-drawer=
 
@@ -4405,7 +4405,7 @@ This function removes empty =CLOCK= drawers and has been added to
 =org-clock-out-hook=: when clocking out, if no CLOCK log has been
 inserted and the drawer is empty, the drawer will be removed.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D65b64bea53e73ea73a4b791a1057b074db144b23][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/65b64bea53e73ea73a4b791a1057b074db144b23][(git commit)]]
 
 *** Capture: new escape sequence =%F= for templates
 
@@ -4415,7 +4415,7 @@ file or the directory the capture mechanism was called from
 
 Thanks to Nicolas Goaziou for this change.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D819fbec64160c3c33884b116734c01f56be7606b][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/819fbec64160c3c33884b116734c01f56be7606b][(git commit)]]
 
 *** Agenda: new variable =org-agenda-bulk-custom-functions= for custom bulk functions
 
@@ -4433,7 +4433,7 @@ the latter ones take precedence.
 
 Thanks to Julien Cubizolles for triggering this idea.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D1029a9251741c2cdf10281866a2fbbdaf2e1cb25][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/1029a9251741c2cdf10281866a2fbbdaf2e1cb25][(git commit)]]
 
 *** Refile: exclude irrelevant headings
 
@@ -4480,7 +4480,7 @@ In this example, =0.92= is a fraction of hour, the default for
 
 Thanks to Daniel E. Doherty for discussions about this.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D70fab165e1966b32e08ed05776ca19e711d1d1e9][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/70fab165e1966b32e08ed05776ca19e711d1d1e9][(git commit)]]
 
 *** Table: display field's coordinates when editing it with =C-c `=
 
@@ -4489,7 +4489,7 @@ the displayed in the buffer.
 
 Thanks to Michael Brand for a patch to this effect.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3De7eb56f39b5b843bc1487bb49c58e99e51c81fc1][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/e7eb56f39b5b843bc1487bb49c58e99e51c81fc1][(git commit)]]
 
 *** Babel: support for =java= code blocks
 
@@ -4525,7 +4525,7 @@ The =contrib/babel/langs/= contains the new library
 
 Thanks to him for this addition.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D2249abb8ad4bb266c5eb808fce1f7e6be9173628][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/2249abb8ad4bb266c5eb808fce1f7e6be9173628][(git commit)]]
 
 *** Babel: support for the [[http://fomus.sourceforge.net/][fomus]] language by Torsten Anders
 
@@ -4533,7 +4533,7 @@ Thanks to him for this addition.
 
 Thanks to Torsten Anders for contributing this functionality.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Dbaa83dacc732c51e15a593b02218bc5f9ef7fb2e][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/baa83dacc732c51e15a593b02218bc5f9ef7fb2e][(git commit)]]
 
 *** Publish: hide .orgx files and use theindex.org directly
 
@@ -4546,7 +4546,7 @@ directly stored in the file =theindex.org=, not in the file
 Thanks to Nathan Neff and Carsten for pointing at the problems
 and solutions.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Df0d7acfb7867518529d63fe3d111f5f3cf39a61f][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/f0d7acfb7867518529d63fe3d111f5f3cf39a61f][(git commit)]]
 
 *** Export: new variable =org-export-html-divs= to allow custom divs
 
@@ -4564,7 +4564,7 @@ variable anymore.
 Thanks to Sébastian Vauban for a preliminary version of this
 patch.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D2f1fbc58be1dc48621217d666da7bc46c3c5d84e][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/2f1fbc58be1dc48621217d666da7bc46c3c5d84e][(git commit)]]
 
 *** Export: new variable =org-export-latex-quotes= to customize quotes in LaTeX export
 
@@ -4578,7 +4578,7 @@ of "some quoted text".
 Thanks to Frederik for bringing this issue up, and to Thomas S.
 Dye, Nick Dokos and Stefan Nobis for elaborating this solution.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D2b9afb9e63d2fd60a3bb09e33c9d4abb01586339][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/2b9afb9e63d2fd60a3bb09e33c9d4abb01586339][(git commit)]]
 
 ** Important bugfixes
 
@@ -4590,7 +4590,7 @@ Thanks to Christian Moe for signaling this problem.
 
 Thanks to Stefan Vollmar for mentioning this problem.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Dbbb2ef510ae8fbf28296c8968b99a24408c7c3ce][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/bbb2ef510ae8fbf28296c8968b99a24408c7c3ce][(git commit)]]
 
 ** Details
 
@@ -4600,7 +4600,7 @@ Thanks to David Maus for suggesting related improvements to
 =org-map-entries=.  This one prepares the possibility of letting
 some commands to loop over the active region.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D59e7fc4d3a4ee441d4716ca37fd41a2fa64e04d5][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/59e7fc4d3a4ee441d4716ca37fd41a2fa64e04d5][(git commit)]]
 
 *** org-depend.el: new chain-find-next trigger option
 
@@ -4608,7 +4608,7 @@ See the updated docstring of this file.
 
 Thanks a lot to Max Mikhanosha for this!
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Db1279dde0fec5e043b294117d9b999eb99be9a0f][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/b1279dde0fec5e043b294117d9b999eb99be9a0f][(git commit)]]
 
 *** Export: new experimental exporter to MoinMoin by Puneeth Chaganti.
 
@@ -4617,7 +4617,7 @@ allows you to export an Org file to a MoinMoin file.
 
 Thanks to Puneeth Chaganti for this addition.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3Da90b876b936820f6a80cc2ffa807bc29a9de73eb][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/a90b876b936820f6a80cc2ffa807bc29a9de73eb][(git commit)]]
 
 *** Export: new default for =org-export-html-preamble=
 
@@ -4638,7 +4638,7 @@ which makes more sense.
 
 Thanks to Sebastien Vauban for this suggestion.
 
-[[https://orgmode.org/w/?p%3Dorg-mode.git%3Ba%3Dcommit%3Bh%3D46a5bde601980c47eccd06d87b82dbae85b20704][(git commit)]]
+[[https://code.orgmode.org/bzg/org-mode/commit/46a5bde601980c47eccd06d87b82dbae85b20704][(git commit)]]
 
 *** Export: allow =org-export-latex-href-format= to have only one "%s"
 
