--- a/ja/index.org
+++ b/ja/index.org
@@ -73,7 +73,7 @@ The //de facto// mimetype for org attachments is =text/org=.
 
 一冊売れるごとに、 [[http://www.network-theory.co.uk/][Network-Theory Ltd.]] を介してOrg-modeのメンテナに1ドルが寄付されます。
 
-マニュアル（完全版）： [[https://orgmode.org/org.html][HTML]] もしくは [[https://orgmode.org/org.pdf][PDF]]
+マニュアル（完全版）： [[https://orgmode.org/org.html][HTML]], [[https://takaxp.github.io/org-ja.html][HTML(v7.5,jp)]] もしくは [[https://orgmode.org/org.pdf][PDF]]
 
 コンパクトガイド： [[https://orgmode.org/guide/][HTML]] もしくは [[https://orgmode.org/orgguide.pdf][PDF]]
 
