--- a/talks.org
+++ b/talks.org
@@ -112,7 +112,7 @@ You can check [[https://orgmode.org/worg/org-tutorials/org-screencasts/ghm2011-d
   :END:
 
 #+begin_export html
-<iframe width="420" height="315" src="http://www.youtube.com/embed/mUSoo4UaKBo" frameborder="0" allowfullscreen></iframe>
+<iframe width="420" height="315" src="https://www.youtube.com/watch?v=wiMSzI6VHhM" frameborder="0" allowfullscreen></iframe>
 #+end_export
 
 The slides are available [[http://florian.adamsky.it/research/talks/gpn12/GPN12-Emacs-Org-mode.pdf][as PDF here]].
