feature.org: Fix link

--- a/features.org
+++ b/features.org
@@ -278,7 +278,7 @@ List of [[https://orgmode.org/worg/org-contrib/babel/languages.html][supported l
 #+ATTR_HTML: :style float:right;box-shadow:none; :width 200px
 [[file:img/mobile.png]]
 
-/Richard Moreland/ has developed [[http://mobileorg.ncogni.to/][MobileOrg]], a free software for iPhone and
+/Richard Moreland/ has developed [[http://mobileorg.github.io/][MobileOrg]], a free software for iPhone and
 iPod Touch for storing, searching, viewing and editing your Org files.
 
 /Matt Jones/ has developed an equivalent [[https://play.google.com/store/apps/details?id%3Dcom.matburt.mobileorg#?t%3DW251bGwsMSwxLDIxMiwiY29tLm1hdGJ1cnQubW9iaWxlb3JnIl0.][MobileOrg]] for the Android platform
