--- a/Changes.org
+++ b/Changes.org
@@ -14,502 +14,417 @@
 projects, and authoring documents with a fast and effective plain-text system.</em></p></div>
 #+END_EXPORT
 
-* Version 9.1
-
+* Version 9.2
 ** Incompatible changes
+*** Removal of OrgStruct mode mode and radio lists
 
-*** Variables relative to clocksum duration are obsolete
+OrgStruct minor mode and radio lists mechanism (~org-list-send-list~
+and ~org-list-radio-lists-templates~) are removed from the code base.
 
-~org-time-clocksum-format~, ~org-time-clocksum-use-fractional~ and
-~org-time-clocksum-fractional-format~ are obsolete.  If you changed
-them, consider modifying ~org-duration-format~ instead.
+Note that only radio /lists/ have been removed, not radio tables.
 
-Variable ~org-time-clocksum-use-effort-durations~ is also obsolete.
-Consider setting ~org-duration-units~ instead.
+If you want to manipulate lists like in Org in other modes, we suggest
+to use orgalist.el, which you can install from GNU ELPA.
 
-*** ~org-at-timestamp-p~ optional argument accepts different values
+If you want to use Org folding outside of Org buffers, you can have a
+look at the outshine package in the MELPA repository.
 
-See docstrings for the allowed values.  For backward compatibility,
-~(org-at-timestamp-p t)~ is still supported, but should be updated
-accordingly.
+*** Change in the structure template expansion
 
-*** ~org-capture-templates~ no longer accepts S-expressions as file names
+Org 9.2 comes with a new template expansion mechanism, combining
+~org-insert-structure-template~ bound to ~C-c C-,~.
 
-Since functions are allowed there, a straightforward way to migrate
-is to turn, e.g.,
+If you customized the ~org-structure-template-alist~ option manually,
+you probably need to udpate it, see the docstring for accepted values.
 
-: (file (sexp))
+If you prefer using previous patterns, e.g. =<s=, you can activate
+them again by requiring Org Tempo library:
 
-into
+: (require 'org-tempo)
 
-: (file (lambda () (sexp)))
+or add it to ~org-modules~.
 
-*** Deleted contributed packages
+If you need complex templates, look at the ~tempo-define-template~
+function or at solutions like Yasnippet.
 
-=org-ebib.el, =org-bullets.el= and =org-mime.el= have been deleted
-from the contrib/ directory.
+*** Change to Noweb expansion
 
-You can now find them here :
+Expansion check =:noweb-ref= only if no matching named block is found
+in the buffer.  As a consequence, any =:noweb-ref= value matching the
+name of a source block in the buffer is ignored. A simple fix is to
+give every concerned source-block, including the named one, a new,
+unique, Noweb reference.
 
-- https://github.com/joostkremers/ebib
-- https://github.com/sabof/org-bullets
-- https://github.com/org-mime/org-mime
+#+BEGIN_SRC org
+  ,#+NAME: foo
+  ,#+BEGIN_SRC emacs-lisp
+    1
+  ,#+END_SRC
 
-*** Change ~org-texinfo-classes~ value
+  ,#+BEGIN_SRC emacs-lisp :noweb-ref foo
+    2
+  ,#+END_SRC
 
-The value cannot support functions to create sectionning commands
-anymore.  Also, the sectionning commands should include commands for
-appendices.  See the docstring for more information.
-
-*** Removal of ~:sitemap-sans-extension~
-
-The publishing property is no longer recognized, as a consequence of
-changes to site-map generation.
-
-You can get the same functionality by setting ~:sitemap-format-entry~
-to the following
-
-#+BEGIN_SRC elisp
-(lambda (entry style project)
-  (cond ((not (directory-name-p entry))
-	 (format "[[file:%s][%s]]"
-		 (file-name-sans-extension entry)
-		 (org-publish-find-title entry project)))
-	((eq style 'tree) (file-name-nondirectory (directory-file-name entry)))
-	(t entry)))
+  ,#+BEGIN_SRC emacs-lisp :noweb yes
+    <<foo>>
+  ,#+END_SRC
 #+END_SRC
 
-*** Change signature for ~:sitemap-function~
+should become
 
-~:sitemap-function~ now expects to be called with two arguments.  See
-~org-publish-project-alist~ for details.
+#+BEGIN_SRC org
+  ,#+NAME: foo
+  ,#+BEGIN_SRC emacs-lisp :noweb-ref bar
+    1
+  ,#+END_SRC
 
-*** Change signature for some properties in ~org-list-to-generic~
+  ,#+BEGIN_SRC emacs-lisp :noweb-ref bar
+    2
+  ,#+END_SRC
 
-~:istart~, ~:icount~, ~:iend~ and ~:isep~ now expect the type of the
-list as their first argument.
+  ,#+BEGIN_SRC emacs-lisp :noweb yes
+    <<bar>>
+  ,#+END_SRC
+#+END_SRC
 
-*** Change signature for ~org-get-repeater~
+*** Default/accepted values of ~org-calendar-to-agenda-key~
 
-The optional argument is now a string to extract the repeater from.
-See docstring for details.
+The default value and accepted value of  ~org-calendar-to-agenda-key~
+changed.  This is an excerpt of the new docstring:
 
-*** Change signature for ~org-time-string-to-time~
+: When set to ‘default’, bind the function to ‘c’, but only if it is
+: available in the Calendar keymap.  This is the default choice because
+: ‘c’ can then be used to switch back and forth between agenda and calendar.
+:
+: When nil, ‘org-calendar-goto-agenda’ is not bound to any key.
 
-See docstring for changes.
+Check the full docstring for more.
 
-*** Change order of items in ~org-agenda-time-grid~
+*** Change the signature of the ~org-set-effort~ function
 
-~org-agenda-time-grid~ gained an extra item to allow users to customize
-the string displayed after times in the agenda. See docstring for
-details.
+Here is the new docstring:
 
-*** ~tags-todo~ custom searches now include DONE keywords
+: (org-set-effort &optional INCREMENT VALUE)
+:
+: Set the effort property of the current entry.
+: If INCREMENT is non-nil, set the property to the next allowed
+: value.  Otherwise, if optional argument VALUE is provided, use
+: it.  Eventually, prompt for the new value if none of the previous
+: variables is set.
 
-Use "/!" markup when filtering TODO keywords to get only not-done TODO
-keywords.
+*** Placeholders in =(eval ...)= macros are always strings
 
-*** Removal of =ob-scala.el=
-
-See [[https://github.com/ensime/emacs-scala-mode/issues/114][this github issue]].
-
-You can use =ob-scala.el= as packaged in scala-mode, available from the
-MELPA repository.
-
-** New features
-*** iCalendar export uses inheritance for TIMEZONE and LOCATION properties
-Both these properties can be inherited during iCalendar export,
-depending on the value of ~org-use-property-inheritance~.
-*** iCalendar export respects a TIMEZONE property
-Set the TIMEZONE property on an entry to specify a time zone for that
-entry only during iCalendar export.  The property value should be
-specified as in "Europe/London".
-*** ~org-attach~ can move directory contents
-When setting a new directory for an entry, org-attach offers to move
-files over from the old directory.  Using a prefix arg will reset the
-directory to old, ID based one.
-*** New Org duration library
-This new library implements tools to read and print time durations in
-various formats (e.g., "H:MM", or "1d 2h 3min"...).
-
-See ~org-duration-to-minutes~ and ~org-duration-from-minutes~
-docstrings.
-
-*** Agenda
-**** New variable : ~org-agenda-show-future-repeats~
-**** New variable : ~org-agenda-prefer-last-repeat~
-**** New variable : ~org-deadline-past-days~
-See docstring for details.
-**** Binding C-c C-x < for ~org-agenda-set-restriction-lock-from-agenda~
-**** New auto-align default setting for =org-agenda-tags-column=
-
-=org-agenda-tags-column= can now be set to =auto=, which will
-automatically align tags to the right edge of the window.  This is now
-the default setting.
-
-*** New value for ~org-publish-sitemap-sort-folders~
-
-The new ~ignore~ value effectively allows toggling inclusion of
-directories in published site-maps.
-
-*** Babel
-
-**** Scheme: support for tables
-**** Scheme: new variable: ~org-babel-scheme-null-to~
-
-This new custom option allows to use a empty list or null symbol to
-format the table output, initially assigned to ~hlines~.
-
-**** Scheme: new header ~:prologue~
-
-A new block code header has been created for Org Babel that enables
-developers to prepend code to the scheme block being processed.
-
-Multiple ~:prologue~ headers can be added each of them using a string
-with the content to be added.
-
-The scheme blocks are prepared by surronding the code in the block
-with a let form. The content of the ~:prologue~ headers are prepended
-before this let form.
-
-**** Support for hledger accounting reports added
-**** Clojure: new setting ~org-babel-clojure-sync-nrepl-timeout~
-
-Creation of a new setting to specify the Cider timeout.  By setting
-the =org-babel-clojure-sync-nrepl-timeout= setting option.  The value
-is in seconds and if set to =nil= then no timeout will occur.
-**** Clojure: new header ~:show-process~
-
-A new block code header has been created for Org Babel that enables
-developers to output the process of an ongoing process into a new
-window/buffer.
-
-You can tell Org Babel to output the process of a running code block.
-
-To show that output you only have to specify the =:show-process=
-option in the code block's header like this:
+Within =(eval ...)= macros, =$1=-like placeholders are always replaced
+with a string.  As a consequence, they must not be enclosed within
+quotes. As an illustration, consider the following, now valid,
+examples:
 
 #+begin_example
-,#+BEGIN_SRC clojure :results output :show-process t
-  (dotimes [n 10]
-    (println n ".")
-    (Thread/sleep 500))
-,#+END_SRC
+  ,#+macro: join (eval (concat $1 $2))
+  ,#+macro: sum (eval (+ (string-to-number $1) (string-to-number $2)))
+
+  {{{join(a,b)}}} => ab
+  {{{sum(1,2)}}}  => 3
 #+end_example
 
-If =:show-process= is specified that way, then when you will run the
-code using =C-c C-c= a new window will open in Emacs.  Everything that
-is output by the REPL will immediately be added to that new window.
-
-When the processing of the code is finished, then the window and its
-buffer will be closed and the results will be reported in the
-=#+RESULTS= section.
-
-Note that the =:results= parameter's behavior is *not* changed.  If
-=silent= is specified, then no result will be displayed.  If =output=
-is specified then all the output from the window will appears in the
-results section.  If =value= is specified, then only the last returned
-value of the code will be displayed in the results section.
-
-**** Maxima: new headers ~:prologue~ and ~:epilogue~
-Babel options ~:prologue~ and ~:epilogue~ have been implemented for
-Maxima src blocks which prepend and append, respectively, the given
-code strings.  This can be useful for specifying formatting settings
-which would add clutter to exported code.  For instance, you can use
-this ~:prologue "fpprintprec: 2; linel: 50;"~ for presenting Maxima
-results in a beamer presentation.
-**** PlantUML: add support for header arguments
-
-[[http://plantuml.com/][Plantuml]] source blocks now support the [[https://orgmode.org/manual/prologue.html#prologue][~:prologue~]], [[https://orgmode.org/manual/epilogue.html#epilogue][~:epilogue~]] and
-[[https://orgmode.org/manual/var.html#var][~:var~]] header arguments.
-
-**** SQL: new engine added ~sqsh~
-
-A new engine was added to support ~sqsh~ command line utility for use
-against Microsoft SQL Server or Sybase SQL server.
-
-More information on ~sqsh~ can be found here: [[https://sourceforge.net/projects/sqsh/][sourceforge/sqsh]]
-
-To use ~sqsh~ in an *sql* =SRC_BLK= set the =:engine= like this:
+However, there is no change in non-eval macros:
 
 #+begin_example
-,#+BEGIN_SRC sql :engine sqsh :dbhost my_host :dbuser master :dbpassword pass :database support
-Select * From Users
-Where clue > 0
-,#+END_SRC
+  ,#+macro: disp argument: $1
+
+  {{{disp(text)}}} => argument: text
 #+end_example
 
-**** SQL: new engine added =vertica=
+*** =align= STARTUP value no longer narrow table columns
 
-A new engine was added to support vsql command line utility for use
-against HP Vertica.
+Columns narrowing (or shrinking) is now dynamic. See [[*Dynamically
+narrow table columns]] for details. In particular, it is decoupled from
+aligning.
 
-More information on =vsql= can be found here: [[https://my.vertica.com/docs/7.2.x/HTML/index.htm#Authoring/ConnectingToHPVertica/vsql/UsingVsql.htm][my.vertica.com]]
-
-To use =vertica= in an sql =SRC_BLK= set the =:engine= like this:
+If you need to automatically shrink columns upon opening an Org
+document, use =shrink= value instead, or in addition to align:
 
 #+BEGIN_EXAMPLE
-  ,#+BEGIN_SRC sql :engine vertica :dbhost my_host :dbuser dbadmin :dbpassword pw :database vmart
-  SELECT * FROM nodes;
-  ,#+END_SRC
+,#+STARTUP: align shrink
 #+END_EXAMPLE
-**** C++: New header ~:namespaces~
 
-The new ~:namespaces~ export option can be used to specify namespaces
-to be used within a C++ org source block.  Its usage is similar to
-~:includes~, in that it can accept multiple, space-separated
-namespaces to use.  This header is equivalent to adding ~using
-namespace <name>;~ in the source block. Here is a "Hello World" in C++
-using ~:namespaces~:
+*** ~org-get-tags~ meaning change
+
+Function ~org-get-tags~ used to return local tags to the current
+headline.  It now returns all the inherited tags in addition to the
+local tags.  In order to get the old behaviour back, you can use:
+
+: (org-get-tags nil t)
+
+*** Alphabetic sorting in tables and lists
+
+When sorting alphabetically, ~org-table-sort-lines~ and ~org-sort-list~
+now sort according to the locale’s collation rules instead of by
+code-point.
+
+*** Change the name of the :tags clocktable option to :match
+
+The =:match= (renamed from =:tags=) option allows to limit clock entries
+to those matching a todo-tags matcher.
+
+The old =:tags= option can be set to =t= to display a headline's tags in a
+dedicated column.
+
+This is consistent with the naming of =org-dblock-write:columnview=
+options, where =:match= is also used as a headlines filter.
+
+** New features
+*** Add ~:results link~ support for Babel
+
+With this output format, create a link to the file specified in
+~:file~ header argument, without actually writing any result to it:
 
 #+begin_example
-  ,#+BEGIN_SRC C++ :results output :namespaces std :includes <iostream>
-    cout << "Hello World" << endl;
-  ,#+END_SRC
+,#+begin_src shell :dir "data/tmp" :results link :file "crackzor_1.0.c.gz"
+wget -c "http://ben.akrin.com/crackzor/crackzor_1.0.c.gz"
+,#+end_src
+
+,#+results:
+[[file:data/tmp/crackzor_1.0.c.gz]]
 #+end_example
 
-**** Support for Vala language
-
-[[https://wiki.gnome.org/Projects/Vala][Vala]] language blocks support two special header arguments:
-
-- ~:flags~ passes arguments to the compiler
-- ~:cmdline~ passes commandline arguments to the generated executable
-
-Support for [[https://orgmode.org/manual/var.html#var][~:var~]] does not exist yet, also there is no [[https://orgmode.org/manual/session.html#session][~:session~]]
-support because Vala is a compiled language.
-
-The Vala compiler binary can be changed via the ~defcustom~
-~org-babel-vala-compiler~.
-
-*** New ~function~ scope argument for the Clock Table
-Added a nullary function that returns a list of files as a possible
-argument for the scope of the clock table.
-*** Export
-**** Implement vernacular table of contents in Markdown exporter
-Global table of contents are generated using vanilla Markdown syntax
-instead of HTML.  Also #+TOC keyword, including local table of
-contents, are now supported.
-**** Add Slovanian translations
-**** Implement ~org-export-insert-image-links~
-This new function is meant to be used in back-ends supporting images
-as descriptions of links, a.k.a. image links.  See its docstring for
-details.
-**** New macro : ~{{{n}}}~
-This macro creates and increment multiple counters in a document.  See
+*** Add ~:session~ support of ob-js for js-comint
+#+begin_src js :session "*Javascript REPL*"
+console.log("stardiviner")
+#+end_src
+*** Add ~:session~ support of ob-js for Indium
+#+begin_src js :session "*JS REPL*"
+console.log("stardiviner")
+#+end_src
+*** Add ~:session~ support of ob-js for skewer-mode
+#+begin_src js :session "*skewer-repl*"
+console.log("stardiviner")
+#+end_src
+*** Add support for links to LaTeX equations in HTML export
+Use MathJax links when enabled (by ~org-html-with-latex~), otherwise
+add a label to the rendered equation.
+*** Org Tempo may used for snippet expansion of structure template.
+See manual and the commentary section in ~org-tempo.el~ for details.
+*** Exclude unnumbered headlines from table of contents
+Set their =UNNUMBERED= property to the special =notoc= value.  See
 manual for details.
-**** Add global macros through ~org-export-global-macros~
-With this variable, one can define macros available for all documents.
-**** New keyword ~#+EXPORT_FILE_NAME~
-Similarly to ~:EXPORT_FILE_NAME:~ property, this keyword allows the
-user to specify the name of the output file upon exporting the
-document.  This also has an effect on publishing.
-**** Horizontal rules are no longer ignored in LaTeX table math mode
-**** Use ~compilation-mode~ for compilation output
-**** Plain lists accept a new ~:separator~ attribute in Texinfo
+*** ~org-archive~ functions update status cookies
 
-The new ~:separator~ attribute splits a tag from a description list
-item into multiple parts.  This allows to have two-column tables with
-multiple entries in the first column.  See manual for more details.
+Archiving headers through ~org-archive-subtree~ and
+~org-archive-to-archive-sibling~ such as the ones listed below:
 
-**** ~latex-environment~ elements support ~caption~ keywords for LaTeX export
-*** ~org-edit-special~ can edit LaTeX environments
+#+BEGIN_SRC org
+  ,* Top [1/2]
+  ,** DONE Completed
+  ,** TODO Working
+#+END_SRC
 
-Using ~C-c '~ on a LaTeX environment opens a sub-editing buffer.  By
-default, major mode in that buffer is ~latex-mode~, but it can be
-changed by configuring ~org-src-lang-modes~.
+Will update the status cookie in the top level header.
 
-*** ~org-list-to-generic~ includes a new property: ~:ifmt~
+*** Disable =org-agenda-overriding-header= by setting to empty string
 
-~:ifmt~ is a function to be called on the body of each item.  See
-~org-list-to-generic~ documentation for details.
+The ~org-agenda-overriding-header~ inserted into agenda views can now
+be disabled by setting it to an empty string.
 
-*** New variable : ~org-bibtex-headline-format-function~
-This allow to use a different title than entry title.
+*** Dynamically narrow table columns
 
-*** ~org-attach~ supports attaching files from URLs
+With ~C-c TAB~, it is now possible to narrow a column to the width
+specified by a width cookie in the column, or to 1 character if there
+is no such cookie.  The same keybinding expands a narrowed column to
+its previous state.
 
-Using ~C-c C-a u~ prompts for a URL pointing to a file to be attached
-to the document.
+Editing the column automatically expands the whole column to its full
+size.
 
-*** New option for ~org-refile-use-outline-path~
-~org-refile-use-outline-path~ now supports the setting ~buffer-name~,
-which causes refile targets to be prefixed with the buffer’s
-name. This is particularly useful when used in conjunction with
-~uniquify.el~.
+*** =org-columns-summary-types= entries can take an optional COLLECT function
 
-*** ~org-file-contents~ now allows the FILE argument to be a URL.
-This allows ~#+SETUPFILE:~ to accept a URL instead of a local file
-path.  The URL contents are auto-downloaded and saved to a temporary
-cache ~org--file-cache~.  A new optional argument ~NOCACHE~ is added
-to ~org-file-contents~.
+You can use this to make collection of a property from an entry
+conditional on another entry. E.g. given this configuration:
 
-*** ~org-mode-restart~ now resets the newly added ~org--file-cache~.
-Using ~C-c C-c~ on any keyword (like ~#+SETUPFILE~) will reset the
-that file cache.
+#+BEGIN_SRC emacs-lisp
+  (defun custom/org-collect-confirmed (property)
+    "Return `PROPERTY' for `CONFIRMED' entries"
+    (let ((prop (org-entry-get nil property))
+	  (confirmed (org-entry-get nil "CONFIRMED")))
+      (if (and prop (string= "[X]" confirmed))
+	  prop
+	"0")))
 
-*** New option : ~org-table-duration-hour-zero-padding~
-This variable allow computed durations in tables to be zero-padded.
+  (setq org-columns-summary-types
+	'(("X+" org-columns--summary-sum
+	   custom/org-collect-confirmed)))
+#+END_SRC
 
-*** New mode switch for table formulas : =U=
-This mode omits seconds in durations.
+You can have a file =bananas.org= containing:
 
-** Removed functions
+#+BEGIN_SRC org
+  ,#+columns: %ITEM %CONFIRMED %Bananas{+} %Bananas(Confirmed Bananas){X+}
 
-*** Org Timeline
+  ,* All shipments
+  ,** Shipment 1
+     :PROPERTIES:
+     :CONFIRMED: [X]
+     :Bananas:  4
+     :END:
 
-This feature has been removed.  Use a custom agenda view, possibly
-narrowed to current buffer to achieve a similar functionality.
+  ,** Shipment 2
+     :PROPERTIES:
+     :CONFIRMED: [ ]
+     :BANANAS:  7
+     :END:
+#+END_SRC
 
-*** ~org-agenda-skip-entry-when-regexp-matches~ is obsolete
+... and when going to the top of that file and entering column view
+you should expect to see something like:
 
-Use ~org-agenda-skip-if~ instead.
+| ITEM          | CONFIRMED | Bananas | Confirmed Bananas |
+|---------------+-----------+---------+-------------------|
+| All shipments |           |      11 |                 4 |
+| Shipment 1    | [X]       |       4 |                 4 |
+| Shipment 2    | [ ]       |       7 |                 7 |
 
-*** ~org-agenda-skip-subtree-when-regexp-matches~ is obsolete
+#+BEGIN_EXAMPLE
+  ,#+STARTUP: shrink
+#+END_EXAMPLE
+*** Allow to filter by tags/property when capturing colview
 
-Use ~org-agenda-skip-if~ instead.
+You can now use =:match= to filter entries using a todo/tags/properties
+matcher.
 
-*** ~org-agenda-skip-entry-when-regexp-matches-in-subtree~ is obsolete
+*** Add support for Oracle's database alias in Babel blocks
+=ob-sql= library already support running SQL blocks against an Oracle
+database using ~sqlplus~.  Now it's possible to use alias names
+defined in =TNSNAMES= file instead of specifying full connection
+parameters.  See example bellow.
 
-Use ~org-agenda-skip-if~ instead.
+#+BEGIN_SRC org
+  you can use the previous full connection parameters
+  ,#+BEGIN_SRC sql :engine oracle :dbuser me :dbpassword my_insecure_password :database my_db_name :dbhost my_db_host :dbport 1521
+  select sysdate from dual;
+  ,#+END_SRC
 
-*** ~org-minutes-to-clocksum-string~ is obsolete
+  or the alias defined in your TNSNAMES file
+  ,#+BEGIN_SRC sql :engine oracle :dbuser me :dbpassword my_insecure_password :database my_tns_alias
+  select sysdate from dual;
+  ,#+END_SRC
+#+END_SRC
 
-Use ~org-duration-from-minutes~ instead.
+*** ~org-agenda-set-restriction-lock~ toggle agenda restriction at point
 
-*** ~org-hh:mm-string-to-minutes~ is obsolete
+You can set an agenda restriction lock with =C-x C-x <= or with =<= at the
+beginning of a headline when using Org speed commands.  Now, if there
+is already a restriction at point, hitting =<= again (or =C-x C-x <=) will
+remove it.
 
-Use ~org-duration-to-minutes~ instead.
+** New commands and functions
 
-*** ~org-duration-string-to-minutes~ is obsolete
+*** ~org-insert-structure-template~
 
-Use ~org-duration-to-minutes~ instead.
+This function can be used to wrap existing text of Org elements in
+a #+BEGIN_FOO/#+END_FOO block.  Bound to C-c C-x w by default.
 
-*** ~org-gnus-nnimap-cached-article-number~ is removed.
+*** ~org-export-excluded-from-toc-p~
 
-This function relied on ~nnimap-group-overview-filename~, which was
-removed from Gnus circa September 2010.
+See docstring for details.
 
+*** ~org-timestamp-to-time~
+*** ~org-timestamp-from-string~
+*** ~org-timestamp-from-time~
+*** ~org-attach-dired-to-subtree~
+
+See docstring for details.
+
+*** ~org-toggle-narrow-to-subtree~
+
+Toggle the narrowing state of the buffer: when in a narrowed state,
+widen, otherwise call ~org-narrow-to-subtree~ to narrow.
+
+This is attached to the "s" speed command, so that hitting "s" twice
+will go back to the widen state.
+
+*** ~org-browse-news~
+
+Browse https://orgmode.org/Changes.html to let users read informations
+about the last major release.
+
+There is a new menu entry for this in the "Documentation" menu item.
+
+*** ~org-info-find-node~
+
+From an Org file or an agenda switch to a suitable info page depending
+on the context.
+
+The function is bound to =C-c C-x I=.
+
+** Removed commands and functions
+*** ~org-outline-overlay-data~
+Use ~org-save-outline-visibility~ instead.
+*** ~org-set-outline-overlay-data~
+Use ~org-save-outline-visibility~ instead.
+*** ~org-get-string-indentation~
+It was not used throughout the code base.
+*** ~org-fix-indentation~
+It was not used throughout code base.
+*** ~org-context-p~
+Use ~org-element-at-point~ instead.
+*** ~org-preserve-lc~
+It is no longer used in the code base.
+*** ~org-try-structure-completion~
+Org Tempo may be used as a replacement.  See details above.
 ** Removed options
 
-*** ~org-agenda-repeating-timestamp-show-all~ is removed.
+*** org-babel-use-quick-and-dirty-noweb-expansion
 
-For an equivalent to a ~nil~ value, set
-~org-agenda-show-future-repeats~ to nil and
-~org-agenda-prefer-last-repeat~ to ~t~.
-
-*** ~org-gnus-nnimap-query-article-no-from-file~ is removed.
-
-This variable has no effect, as it was relying on a function that was
-removed from Gnus circa September 2010.
-
-*** ~org-usenet-links-prefer-google~ is obsolete.
-
-Use ~org-gnus-prefer-web-links~ instead.
-
-*** ~org-publish-sitemap-file-entry-format~ is deprecated
-
-One can provide new ~:sitemap-format-entry~ property for a function
-equivalent to the removed format string.
-
-*** ~org-enable-table-editor~ is removed.
-
-Setting it to a ~nil~ value broke some other features (e.g., speed
-keys).
-
-*** ~org-export-use-babel~ cannot be set to ~inline-only~
-
-The variable is now a boolean.
-
-*** ~org-texinfo-def-table-markup~ is obsolete
-
-Use ~org-texinfo-table-default-markup~ instead.
-
-** New functions
-
-*** ~org-publish-find-property~
-
-This function can be used as a tool to format entries in a site-map,
-in addition to ~org-publish-find-title~ and ~org-publish-find-date~.
-
-*** ~org-list-to-org~
-
-It is the reciprocal of ~org-list-to-lisp~, which see.
-
-*** ~org-agenda-set-restriction-lock-from-agenda~
-
-Call ~org-agenda-set-restriction-lock~ from the agenda.
+See [[*Change to Noweb expansion][Change to Noweb expansion]] for explanations.
 
 ** Miscellaneous
 
-*** The Library of Babel now on Worg
+*** New default value for ~org-texinfo-table-scientific-notation~
 
-The library-of-babel.org used to be accessible from the =doc/=
-directory, distributed with Org’s core.  It is now accessible
-from the Worg community-driven documentation [[https://orgmode.org/worg/library-of-babel.html][here]].
+It is now nil, which means numbers in scientific notation are not
+handled specially by default.
 
-If you want to contribute to it, please see [[https://orgmode.org/worg/org-contribute.html][how to contribute]].
+*** New default value for ~org-latex-table-scientific-notation~
 
-*** Allow multiple columns view
+It is now nil, which means numbers in scientific notation are not
+handled specially by default.
 
-Columns view is not limited to a single buffer anymore.
-*** Org Attach obeys ~dired-dwim-target~
+*** New face: ~org-upcoming-distant-deadline~
 
-When a Dired buffer is opened next to the Org document being edited,
-the prompt for file to attach can start in the Dired buffer's
-directory if `dired-dwim-target' in non-nil.
+It is meant to be used as the face for distant deadlines, see
+~org-agenda-deadline-faces~
 
-*** ~org-fill-paragraph~ can now fill a whole region
-*** More specific anniversary descriptions
+*** ~org-paste-subtree~ no longer breaks sections
 
-Anniversary descriptions (used in the agenda view, for instance)
-include the point in time, when the anniversary appears.  This is,
-in its most general form, just the date of the anniversary.  Or
-more specific terms, like "today", "tomorrow" or "in n days" are
-used to describe the time span.
+Unless point is at the beginning of a headline, ~org-paste-subtree~
+now pastes the tree before the next visible headline.  If you need to
+break the section, use ~org-yank~ instead.
 
-This feature allows to automatically change the description of an
-anniversary, depending on if it occurs in the next few days or
-far away in the future.
+*** ~org-table-insert-column~ inserts a column to the right
 
-*** Computed dates in tables appear as inactive time stamps
+It used to insert it on the left.  With this change,
+~org-table-insert-column~ and ~org-table-delete-column~ are
+reciprocal.
 
-*** Save point before opening a file with an unknown search option
+*** ~org-publish-resolve-external-link~ accepts a new optional argument.
+*** ~org-irc.el~ now supports exporting =irc:= links properly
 
-When following a file link with a search option (e.g., =::#custom-id=)
-that doesn't exist in the target file, save positon before raising an
-error.  As a consequence, it is possible to jump back to the original
-document with ~org-mark-ring-goto~ (default binding =C-c &=).
+Previously, irc links were exported by ~ox-md~ and ~ox-html~ as normal
+file links, which lead to them being broken in web browsers. Now both
+of these exporters will properly export to =irc:= links, which will
+open properly in irc clients from web browsers.
 
-*** ~org-get-heading~ accepts two more optional arguments
+*** ~org-comment-dwim~ (bound to =M-;=) now comments headings, if point is on a heading
+*** Add support for open source block in window below
 
-See docstring for details.
+Set option ~org-src-window-setup~ to ~split-window-below~.
 
-*** New option ~org-babel-uppercase-example-markers~
+*** Alphabetic sorting in headings and tags now uses the locale’s sorting rules
 
-This variable is a ~defcustom~ and replaces the variable
-~org-babel-capitalize-example-region-markers~, which is a ~defvar~ and
-is now obselete.
-*** =INCLUDE= keywords in commented trees are now ignored.
-*** Default value for ~org-texinfo-text-markup-alist~ changed.
-
-Now ~=...=~ markup uses ~@samp{}~ instead of ~@verb{}~.  You can use
-~@verb{}~ again by customizing the variable.
-*** Texinfo exports example blocks as ~@example~
-*** Texinfo exports inline src blocks as ~@code{}~
-*** Texinfo default table markup is ~@asis~
-It used to be ~@samp~ but ~@asis~ is neutral and, therefore, more
-suitable as a default value.
-*** Texinfo default process includes ~--no-split~ option
-*** New entities : ~\dollar~ and ~\USD~
-*** ~org-parse-time-string~ accepts a new optional argument
-=ZONE= specifies the current time zone.
-*** ~org-time-string-to-seconds~ now accepts an optional =ZONE= argument
-*** Support for date style URLs in =org-protocol://open-source=
-    URLs like =https://cool-blog.com/2017/05/20/cool-post/= are
-    covered by rewrite rules.
-
-*** Add (C) =COMMENT= support to ~org-structure-template-alist~
-
+When sorting alphabetically, ~org-sort-entries~ and
+~org-tags-sort-function~ now sort according to the locale’s collation
+rules instead of by code-point.
+*** New speed command "k" to kill (cut) the subtree at point
 * Older changes
 
 For older Changes, see [[file:Changes_old.org][old changes]].
