--- a/ja/index.org
+++ b/ja/index.org
@@ -11,7 +11,7 @@
 #+html_head: <meta name="flattr:id" content="8d9x0o">
 
 #+begin_export html
-<div id="top"><p><em>Org-mode は、ノートの保存、TODOリストの管理、プロジェクト計画のためのモードです。高速で効率的なプレーンテキストのシステムを使ってファイルを編集します。<br />
+<div id="top"><p><em>Org-mode は、ノートの保存、TODOリストの管理、プロジェクト計画、文書編集のためのモードです。高速で効率的なプレーンテキストのシステムを使ってファイルを編集します。<br />
 
 <span id="top2">Org-modeは2003年に<a target="new" href="http://staff.science.uva.nl/~dominik/">Carsten Dominik</a>氏によって作られ、2011年から<a target="new" href="http://bzg.fr">Bastien Guerry</a>氏によって管理されています。</span></em></p></div>
 #+end_export
